# pyCppSkeleton

./: .gitignore  .pyCppSkeleton.sh.swp  LICENSE  README.md  pyCppSkeleton.sh
myCppPackage/: CMakeLists.txt  LICENSE  setup.py
myCppPackage/src/myCppPackage/: __init__.py  hello_world_cpp.cpp  hello_world_cpp.hpp  hello_world_python.py
myCppPackage/tests/: hello_world_test.py  test_hello_world.cpp
